Various Java 25 fixes